[gd_scene load_steps=60 format=2]

[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/assets/Skeleton_Warrior-Sheet.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/scripts/Skeleton_warrior.gd" type="Script" id=2]
[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/assets/BarV6_Bar.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/assets/BarV6_ProgressBar.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 1.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.1, 0.2, 0.57, 0.67, 0.77, 0.87 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2d_attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.61, 0.77 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.97 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Block"
length = 1.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92, 93, 94 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.16 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.16 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_block_true"
}, {
"args": [  ],
"method": "set_block_false"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Blocked"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.23, 0.45, 0.66, 0.87 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84, 85 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.94 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.01, 0.94 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_block_true"
}, {
"args": [  ],
"method": "set_block_false"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fake_Dead"
length = 3.65
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 3.6 ),
"transitions": PoolRealArray( 1, 28.84, 0.00048828 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 3.6 ),
"transitions": PoolRealArray( 1, 28.84, 0.00048828 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 0, 13 ), Vector2( 0, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 3.6 ),
"transitions": PoolRealArray( 1, 28.84, 0.00048828 ),
"update": 0,
"values": [ 11.0, 11.0, 11.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:shape:height")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 3.6 ),
"transitions": PoolRealArray( 1, 28.84, 0.00048828 ),
"update": 0,
"values": [ 20.0, 0.0, 20.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_block_true"
}, {
"args": [  ],
"method": "set_block_false"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 0.7
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2d_attack/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 11.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:shape:height")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 14 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionShape2D:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Walk"
length = 0.78
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Dead"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Fake_Dead"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=67]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=68]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=69]
states/Attack/node = SubResource( 12 )
states/Attack/position = Vector2( -132, 25 )
states/Dead/node = SubResource( 15 )
states/Dead/position = Vector2( 2, 464 )
states/Fake_Dead/node = SubResource( 16 )
states/Fake_Dead/position = Vector2( 662, 464 )
states/Hit/node = SubResource( 17 )
states/Hit/position = Vector2( 830, 54 )
states/Idle/node = SubResource( 18 )
states/Idle/position = Vector2( 38, 280 )
states/Run/node = SubResource( 19 )
states/Run/position = Vector2( 353, -112 )
states/Walk/node = SubResource( 20 )
states/Walk/position = Vector2( 706, 191 )
transitions = [ "Idle", "Walk", SubResource( 21 ), "Idle", "Run", SubResource( 22 ), "Run", "Idle", SubResource( 23 ), "Walk", "Idle", SubResource( 24 ), "Run", "Attack", SubResource( 25 ), "Walk", "Attack", SubResource( 26 ), "Idle", "Attack", SubResource( 27 ), "Attack", "Idle", SubResource( 28 ), "Attack", "Run", SubResource( 29 ), "Attack", "Walk", SubResource( 30 ), "Run", "Walk", SubResource( 31 ), "Walk", "Run", SubResource( 32 ), "Attack", "Fake_Dead", SubResource( 41 ), "Run", "Fake_Dead", SubResource( 42 ), "Walk", "Fake_Dead", SubResource( 43 ), "Idle", "Fake_Dead", SubResource( 44 ), "Fake_Dead", "Run", SubResource( 47 ), "Fake_Dead", "Walk", SubResource( 48 ), "Fake_Dead", "Idle", SubResource( 49 ), "Fake_Dead", "Attack", SubResource( 50 ), "Attack", "Dead", SubResource( 52 ), "Idle", "Dead", SubResource( 53 ), "Walk", "Dead", SubResource( 54 ), "Run", "Dead", SubResource( 55 ), "Run", "Hit", SubResource( 61 ), "Walk", "Hit", SubResource( 62 ), "Idle", "Hit", SubResource( 63 ), "Attack", "Hit", SubResource( 64 ), "Hit", "Attack", SubResource( 65 ), "Hit", "Run", SubResource( 66 ), "Hit", "Walk", SubResource( 67 ), "Hit", "Idle", SubResource( 68 ), "Hit", "Fake_Dead", SubResource( 75 ), "Fake_Dead", "Hit", SubResource( 76 ) ]
start_node = "Idle"
end_node = "Dead"
graph_offset = Vector2( -228, -198 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=70]

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 12, 24.5 )

[node name="SkeletonWarrior" type="KinematicBody2D" groups=["Enemy"]]
scale = Vector2( 2, 2 )
collision_layer = 8
collision_mask = 83
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9
vframes = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 14 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Block = SubResource( 3 )
anims/Blocked = SubResource( 4 )
anims/Dead = SubResource( 5 )
anims/Fake_Dead = SubResource( 6 )
anims/Hit = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/Run = SubResource( 10 )
anims/Walk = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 69 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 70 )

[node name="Raycast_detech_floor" type="RayCast2D" parent="."]
position = Vector2( 13, 20 )
enabled = true
cast_to = Vector2( 0, 11 )

[node name="Raycast_detech_wall" type="RayCast2D" parent="."]
position = Vector2( 10, 16 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="Raycast_detech_player_towards" type="RayCast2D" parent="."]
position = Vector2( 10.5, -6.5 )
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 4

[node name="Area2d_attack" type="Area2D" parent="." groups=["Attack"]]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2d_attack"]
position = Vector2( 26, -0.5 )
shape = SubResource( 71 )
disabled = true

[node name="Health_bar" type="TextureProgress" parent="."]
margin_left = -27.0
margin_top = -25.0
margin_right = 245.0
margin_bottom = -4.0
rect_scale = Vector2( 0.2, 0.2 )
max_value = 300.0
value = 300.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 3, 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2d_attack" to="." method="_on_Area2d_attack_body_entered"]
